# net-trace

./: .gitignore  README.md  dashboard.html  dashboard_server.py  network_check.html  network_check_server.py  pyproject.toml
src/netest/: __init__.py  __main__.py  cli.py  config.py  network_info.py  output.py  ping_module.py  speedtest_module.py  traceroute_module.py  utils.py  wifi_module.py
src/netest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
