[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netest"
version = "0.1.0"
description = "macOS 网络诊断工具 - 网速测试、WiFi 质量检测、路由追踪、网络信息全面采集"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "netest"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: System :: Networking",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS :: MacOS X",
]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "speedtest-cli>=2.1.3",
]

[project.optional-dependencies]
wifi = [
    "pyobjc-framework-CoreWLAN>=11.0",
]
full = [
    "pyobjc-framework-CoreWLAN>=11.0",
]
web = [
    "flask>=3.0",
    "flask-cors>=5.0",
]

[project.scripts]
netest = "netest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
